@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.874 2007-12-31 21:37:19 castaglia Exp $
+$Id: NEWS,v 1.875 2007-12-31 22:33:30 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -75,6 +75,8 @@ CVS
   compile time.
 - Bug 3014 - Optionally set PAM_TTY item when using PAM.  Use
   "AuthPAMOptions NoTTY" to disable this.
+- Bug 2741 - Apply TimeoutNoTransfer, TimeoutStalled, TimeoutIdle to
+  <Anonymous> section.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
